--- a/frontend/src/assets/styles/components/Main.css
+++ b/frontend/src/assets/styles/components/Main.css
@@ -1,93 +1,69 @@
 .main {
-    width: 100%;
-    min-height: 900px;
-    padding-bottom: 200px;
-    background-position: top left;
-    background-size: cover;
+  width: 100%;
+  min-height: 900px;
+  padding-bottom: 200px;
+  background-position: top left;
+  background-size: cover;
 }
 
 .main__section {
-    padding-top: 160px;
-    padding-left: 70px;
-    width: 40%;
+  padding-top: 160px;
+  padding-left: 70px;
+  width: 40%;
 }
 
 .main__title {
-    margin-bottom: 25px;
-    color: #C99072;
-    animation: fade-in 0.4s ease;
-    padding-right: calc(var(--gs) * 2);
+  margin-bottom: 25px;
+  color: #c99072;
+  animation: fade-in 0.4s ease;
+  padding-right: calc(var(--gs) * 2);
 }
 
 .main__description {
-    margin-bottom: 45px;
-    animation: fade-in 0.4s ease;
-    padding-right: calc(var(--gs) * 2);
+  margin-bottom: 45px;
+  animation: fade-in 0.4s ease;
+  padding-right: calc(var(--gs) * 2);
 }
 
-.main__links{
-    display: flex;
+.main__links {
+  display: flex;
 }
 
-.main__links li{
-    margin-right: 28px;
+.main__links li {
+  margin-right: 28px;
 }
 
-.main__links a{
-    font-size: 23px;
-    color: var(--cl-grey);
-    border-bottom: 1px solid var(--cl-grey);
+.main__links a {
+  font-size: 23px;
+  color: var(--cl-grey);
+  border-bottom: 1px solid var(--cl-grey);
 }
 
+@media (max-width: 1023px) {
+  .main {
+    width: 100%;
+    min-height: 100px;
+    position: relative;
+  }
 
+  .main__section {
+    padding: 35px 0px;
+    width: 100%;
+    position: relative;
+  }
 
-
-@media (max-width:1023px) {
-    .main {
-        width: 100%;
-        background-color: #333;
-        min-height: 100px;
-        position: relative;
-    }
-    /* .main::before{
-        content: "";
-        position: absolute;
-        width: 100%;
-        height: 50px;
-        top:-50px;
-        left: 0;
-        background: url('../../assets//img/Header/bg__mobile-after.svg') no-repeat;
-        background-size: cover;
-        background-position: bottom;
-    } */
-
-    .main__section{
-        padding: 35px 0px;
-        width: 100%;
-        position: relative;
-    }
-    /* .main__section::before{
-        position: absolute;
-        width: 100%;
-        top:-50px;
-        height: 50px;
-        left: 0;
-        background: url('../../assets//img/Header/bg__mobile-after.svg') no-repeat;
-        background-size: cover;
-            } */
-
-    .main__links{
-        order: 1;
-    }
+  .main__links {
+    order: 1;
+  }
 }
 
 @keyframes fade-in {
-    0%{
-        opacity: 0;
-        transform: translateX(-5%);
-    }
-    100%{
-        opacity: 1;
-        transform: translateX(0%);
-    }
+  0% {
+    opacity: 0;
+    transform: translateX(-5%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0%);
+  }
 }
