--- a/frontend/src/assets/styles/components/Background.css
+++ b/frontend/src/assets/styles/components/Background.css
@@ -22,6 +22,7 @@
   top: 0;
   left: 0;
   z-index: 0;
+
   @media (--tablet-lg) {
     display: none;
   }
@@ -40,22 +41,5 @@
 .background__svg {
   height: 100%;
   width: auto;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  @media (--tablet-lg) {
-    transform: scale(3) translateY(-14%) translateX(20%);
-  }
-}
-
-@media (--tablet) {
-  .background {
-    background-color: #000;
-    position: relative;
-    height: 300px;
-  }
-
-  .background::after {
-    background: none;
-  }
+  transform: translateX(35vw);
 }
