фикс бага бэкграунда(смещение его на мобилке)

--- a/frontend/src/assets/styles/components/Background.css
+++ b/frontend/src/assets/styles/components/Background.css
@@ -42,4 +42,7 @@
   height: 100%;
   width: auto;
   transform: translateX(35vw);
+  @media (--tablet-lg) {
+    transform: translateX(-10vw);
+  }
 }
