добавлены элементы на стрницу контакты, сделана разметка формы

--- a/frontend/src/assets/styles/partials.css
+++ b/frontend/src/assets/styles/partials.css
@@ -25,3 +25,5 @@
 /* Страницы */
 @import "./pages/partners.css";
 @import "./pages/targets.css";
+@import "./pages/contact.css";
+@import "./pages/contactForm.css";
