--- a/frontend/src/assets/styles/pages/contactForm.css
+++ b/frontend/src/assets/styles/pages/contactForm.css
@@ -3,6 +3,7 @@
   height: 100%;
   display: flex;
   padding-left: 70px;
+  padding-bottom: 135px;
   input {
     background-color: #fffefb;
     height: 40px;
@@ -11,10 +12,34 @@
     border: 1px solid #e2e2e2;
     border-radius: 7px;
     font-family: var(--base-font);
+    margin-bottom: 31px;
+    margin-top: 7px;
+  }
+  label:first-of-type {
+    margin-top: 35px;
+  }
+  label {
+    color: #7e7e7e;
+  }
+  textarea {
+    height: 100%;
+    width: 100%;
+    border: 1px solid #e2e2e2;
+    border-radius: 7px;
+    padding: 22px 10px;
+    color: #bcbcbc;
+    font-size: 20px;
   }
 }
 .contactForm__box {
   width: 50%;
   display: flex;
   flex-direction: column;
+  padding-top: 30px;
+}
+.contactForm__box:first-of-type {
+  padding-right: 65px;
+}
+.contactForm__box:last-of-type {
+  padding-left: 65px;
 }
