--- a/frontend/src/assets/styles/partials.css
+++ b/frontend/src/assets/styles/partials.css
@@ -9,6 +9,7 @@
 /* Элементы */
 @import "./elements/link.css";
 @import "./elements/icons.css";
+@import "./elements/checkbox.css";
 /* Особая ссылка на главной странице */
 @import "./elements/home-button.css";
 
