--- a/frontend/src/assets/styles/pages/contactForm.css
+++ b/frontend/src/assets/styles/pages/contactForm.css
@@ -1,3 +1,12 @@
+.section__contact {
+  @media (--tablet-lg) {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #fffaeb;
+  }
+}
+
 .contactForm {
   width: 100%;
   height: 100%;
@@ -39,7 +48,25 @@
 }
 .contactForm__box:first-of-type {
   padding-right: 65px;
+  @media (--tablet-lg) {
+    padding-right: 0;
+  }
 }
 .contactForm__box:last-of-type {
   padding-left: 65px;
+  @media (--tablet-lg) {
+    padding-left: 0px;
+  }
+}
+@media (--tablet-lg) {
+  .contactForm {
+    display: flex;
+    flex-direction: column;
+  }
+  .contactForm__box {
+    width: 100%;
+  }
+  .section {
+    padding-top: 30px;
+  }
 }
