--- a/frontend/src/assets/styles/partials.css
+++ b/frontend/src/assets/styles/partials.css
@@ -28,3 +28,4 @@
 @import "./pages/targets.css";
 @import "./pages/contact.css";
 @import "./pages/contactForm.css";
+@import "./pages/services.css";
