--- a/frontend/src/assets/styles/base/base.css
+++ b/frontend/src/assets/styles/base/base.css
@@ -2,177 +2,180 @@
 *,
 ::before,
 ::after {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html,
 body {
-    min-height: 100vh;
+  min-height: 100vh;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    font-size: 16px;
-    line-height: 24px;
-    overflow-x: hidden;
-    overflow-y: auto;
-    height: 100%;
-    position: relative;
-    vertical-align: top;
-    backface-visibility: hidden;
-    font-family: var(--base-font);
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  line-height: 24px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: 100%;
+  position: relative;
+  vertical-align: top;
+  backface-visibility: hidden;
+  font-family: var(--base-font);
 }
 
 main {
-    position: relative;
-    min-width: var(--mobile-sm-size-min);
-    margin: 0;
+  position: relative;
+  min-width: var(--mobile-sm-size-min);
+  margin: 0;
 }
 
 img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
 }
 
 p {
-    line-height: 24px;
-    font-family: var(--base-font);
-    font-size: 20px;
+  line-height: 24px;
+  font-family: var(--base-font);
+  font-size: 20px;
 }
 
 h1 {
-    font-size: var(--fs-h1);
-    line-height: 1;
-    font-family: var(--title-font);
-    color: var(--cl-brown);
-
+  font-size: var(--fs-h1);
+  line-height: 1;
+  font-family: var(--title-font);
+  color: var(--cl-brown);
 }
 
 h2 {
-    font-size: 48px;
-    line-height: 1.1;
-    font-weight: bold;
+  font-size: 48px;
+  line-height: 1.1;
+  font-weight: bold;
 }
 
 h3 {
-    font-size: 25px;
-    line-height: 28px;
-    font-weight: bold;
+  font-size: 25px;
+  line-height: 28px;
+  font-weight: bold;
 }
 
 h4,
 h5,
 h6 {
-    font-size: 18px;
-    line-height: 24px;
-    font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 500;
 }
 
 button {
+  border: none;
+  outline: none;
+  background: none;
+
+  &:hover,
+  &:active,
+  &:focus {
     border: none;
     outline: none;
-    background: none;
-
-    &:hover,
-    &:active,
-    &:focus {
-        border: none;
-        outline: none;
-    }
+  }
 }
 
 ul,
 ol li {
-    position: relative;
-    list-style: none outside;
+  position: relative;
+  list-style: none outside;
 }
 
 /* Links */
 
 a {
-    color: inherit;
-    fill: inherit;
-    text-decoration: none;
-    transition: var(--time);
+  color: inherit;
+  fill: inherit;
+  text-decoration: none;
+  transition: var(--time);
 }
 
 a:hover {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 a {
-    font-family: var(--title-font);
-    font-size: 23px;
+  font-family: var(--title-font);
+  font-size: 23px;
 }
 
 a.disabled,
 a.is-disabled {
-    cursor: default;
-    pointer-events: none;
+  cursor: default;
+  pointer-events: none;
 }
 
 /* MEDIA
 ============================================================*/
 /* DESKTOP */
 
-@media (max-width:1279px) {
-    h1 {
-         font-size: 30px;
-    }
+@media (max-width: 1279px) {
+  h1 {
+    font-size: 30px;
+  }
 
-    h2 {
-         font-size: 30px;
-    }
+  h2 {
+    font-size: 30px;
+  }
 
-    p {
-         font-size: 18px;
-    }
+  p {
+    font-size: 18px;
+  }
 
-    a {
-        font-size: 20px;
-    }
+  a {
+    font-size: 20px;
+  }
 }
 /* TABLET */
-@media (max-width:767px) {
-    h1 {
-         font-size: 25px;
-    }
+@media (max-width: 767px) {
+  h1 {
+    font-size: 25px;
+  }
 
-    h2 {
-         font-size: 30px;
-    }
+  h2 {
+    font-size: 30px;
+  }
 
-    p {
-         font-size: 18px;
-    }
+  p {
+    font-size: 18px;
+  }
 
-    a {
-         font-size: 20px;
-    }
+  a {
+    font-size: 20px;
+  }
 }
 
 /* MOBILE */
-@media(max-width:479px) {
-    h1 {
-         font-size:25px ;
-    }
+@media (max-width: 479px) {
+  h1 {
+    font-size: 25px;
+  }
 
-    h2 {
-         font-size:25px ;
-    }
+  h2 {
+    font-size: 25px;
+  }
 
-    h3 {
-        font-size: 16px;
-    }
+  h3 {
+    font-size: 16px;
+  }
 
-    p {
-         font-size: 14px;
-    }
+  p {
+    font-size: 14px;
+  }
 
-    a {
-         font-size: 17px;
-    }
+  a {
+    font-size: 17px;
+  }
+}
+#app {
+  height: 100%;
+  width: 100%;
 }
