--- a/frontend/src/assets/styles/base/container.css
+++ b/frontend/src/assets/styles/base/container.css
@@ -1,24 +1,31 @@
 .container {
-    position: relative;
-    width: 100%;
-    min-width: var(--mobile-sm-size-min);
-    max-width: var(--container-max-width);
-    margin: 0 auto;
-    padding: 0 calc(var(--gs) * 8);
+  position: relative;
+  width: 100%;
+  min-width: var(--mobile-sm-size-min);
+  max-width: var(--container-max-width);
+  margin: 0 auto;
+  padding: 0 calc(var(--gs) * 8);
 
-    @media (--desktop) {
-        padding: 0 calc(var(--gs) * 5);
-    }
+  @media (--desktop) {
+    padding: 0 calc(var(--gs) * 5);
+  }
 
-    @media (--tablet-lg) {
-        padding: 0 calc(var(--gs) * 3);
-    }
+  @media (--tablet-lg) {
+    padding: 0 calc(var(--gs) * 3);
+  }
 
-    @media (--tablet) {
-        padding: 0 calc(var(--gs) * 2);
-    }
+  @media (--tablet) {
+    padding: 0 calc(var(--gs) * 2);
+  }
 }
 
 .section {
-    padding-top: calc(var(--gs) * 18.75);
+  padding-top: calc(var(--gs) * 18.75);
+  position: relative;
+  @media (--tablet-lg) {
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+  }
 }
