--- a/frontend/src/assets/styles/components/Background.css
+++ b/frontend/src/assets/styles/components/Background.css
@@ -27,6 +27,11 @@
     display: none;
   }
 }
+.overlay-mobile {
+  position: absolute;
+  width: 100%;
+  top: -5vw;
+}
 
 /* illustration 
 ==================================================== */
