--- a/frontend/src/assets/styles/base/base.css
+++ b/frontend/src/assets/styles/base/base.css
@@ -24,6 +24,7 @@ body {
   vertical-align: top;
   backface-visibility: hidden;
   font-family: var(--base-font);
+  background-color: #fffaeb;
 }
 
 main {
