--- a/frontend/src/assets/styles/base/container.css
+++ b/frontend/src/assets/styles/base/container.css
@@ -1,6 +1,7 @@
 .container {
   position: relative;
   width: 100%;
+  height: 100%;
   min-width: var(--mobile-sm-size-min);
   max-width: var(--container-max-width);
   margin: 0 auto;
@@ -22,10 +23,5 @@
 .section {
   padding-top: calc(var(--gs) * 18.75);
   position: relative;
-  @media (--tablet-lg) {
-    position: absolute;
-    width: 100%;
-    top: 0;
-    left: 0;
-  }
+  overflow: hidden;
 }
