--- a/frontend/src/assets/styles/components/Main.css
+++ b/frontend/src/assets/styles/components/Main.css
@@ -1,12 +1,21 @@
 .main {
   width: 100%;
-
   padding-bottom: 200px;
   background-position: top left;
   background-size: cover;
 
   @media (--desktop) {
-    min-height: 800px;
+    /* min-height: 800px; */
+  }
+
+  @media (--tablet-lg) {
+    padding-top: calc(var(--gs) * 50);
+  }
+
+  &__overlay {
+    @media (--tablet-lg) {
+      display: none;
+    }
   }
 }
 
@@ -54,6 +63,7 @@
     width: 100%;
     min-height: 100px;
     position: relative;
+    /* padding-top: calc(var(--gs) * 27); */
   }
 
   .main__section {
