--- a/frontend/src/assets/styles/pages/targets.css
+++ b/frontend/src/assets/styles/pages/targets.css
@@ -1,6 +1,7 @@
 .targets {
     padding-bottom: calc(var(--gs) * 20);
 
+
     &__button-back {
         margin-bottom: calc(var(--gs) * 3);
     }
@@ -11,6 +12,10 @@
         padding: 0 calc(var(--gs) * 11.25);
         padding-bottom: calc(var(--gs) * 6);
         margin-bottom: calc(var(--gs) * 4);
+
+        @media (--tablet) {
+            width: 100%;
+        }
     }
 
     &__content {
@@ -20,15 +25,7 @@
 
         @media (--tablet) {
             flex-direction: column-reverse;
-        }
-    }
-
-    &__text {
-        width: 45%;
-        margin-right: calc(var(--gs) * 2.75);
-
-        @media (--tablet) {
-            width: 100%;
+            padding: 0;
         }
     }
 
@@ -36,6 +33,14 @@
         display: flex;
         position: static;
         height: 100%;
+
+        @media (--tablet) {
+            height: 320px;
+        }
+
+        @media (--mobile-lg) {
+            height: 180px;
+        }
 
         .swiper-slide {
             display: flex;
@@ -60,5 +65,19 @@
             transform: translateX(-50%);
         }
 
+    }
+
+    &__wrapper {
+        max-height: 55vh;
+        width: 45%;
+        margin-right: calc(var(--gs) * 2.75);
+
+        @media (--tablet) {
+            width: 100%;
+        }
+    }
+
+    &__text {
+        margin-right: calc(var(--gs) * 2);
     }
 }
