--- a/frontend/src/assets/styles/pages/partners.css
+++ b/frontend/src/assets/styles/pages/partners.css
@@ -1,12 +1,30 @@
 .partners {
 
+    &__button-back {
+        margin-bottom: calc(var(--gs) * 3);
+    }
+
     &__container-slider {
+        height: 450px;
         position: relative;
         width: 80%;
-        padding: 0 calc(var(--gs) * 11.25);
+        padding: 0 calc(var(--gs) * 11.25) calc(var(--gs) * 6);
         margin: 0 auto;
-        padding-bottom: calc(var(--gs) * 6);
         margin-bottom: calc(var(--gs) * 4);
+
+        @media (--tablet-lg) {
+            width: 100%;
+        }
+
+        @media (--tablet) {
+            padding-right: 0;
+            padding-left: 0;
+        }
+
+        @media (--mobile-lg) {
+            padding-right: calc(var(--gs) * 3);
+            padding-left: calc(var(--gs) * 3);
+        }
     }
 
     &__swiper {
@@ -17,26 +35,58 @@
         .swiper-slide {
             display: flex;
             justify-content: center;
-            height: 75%;
+            align-items: center;
             /* min-width: 120px; */
             /* max-width: 237px; */
 
             img {
+                transition: var(--animation-time);
+                width: 75%;
+                height: 75%;
                 border-radius: 25px;
                 max-width: 100%;
                 max-height: 100%;
+
+                @media(--mobile-lg) {
+                    width: auto;
+                    height: auto;
+                }
             }
         }
 
         .swiper-slide-active {
             width: 45%;
             height: 100%;
+
+            img {
+                width: 100%;
+                height: 100%;
+
+                @media(--mobile-lg) {
+                    width: auto;
+                    height: auto;
+                }
+            }
         }
 
         .swiper-slide-prev,
         .swiper-slide-next {
             width: 25%;
+        }
 
+        .swiper-button-prev {
+            left: 24px;
+        }
+
+        .swiper-button-next {
+            right: 24px;
+        }
+
+        .swiper-button-next,
+        .swiper-button-prev {
+            @media (--tablet) {
+                display: none;
+            }
         }
 
         .swiper-wrapper {
