Пофиксил общие баги

--- a/frontend/src/assets/styles/components/VSlider.css
+++ b/frontend/src/assets/styles/components/VSlider.css
@@ -80,6 +80,10 @@
         cursor: pointer;
         outline: none;
 
+        @media (--mobile-lg) {
+            width: calc(var(--gs));
+            height: calc(var(--gs));
+        }
 
         &-active {
             background-color: var(--cl-brown);
