--- a/frontend/src/assets/styles/components/Main.css
+++ b/frontend/src/assets/styles/components/Main.css
@@ -10,6 +10,7 @@
 
   @media (--tablet-lg) {
     padding-top: calc(var(--gs) * 50);
+    padding-bottom: calc(var(--gs) * 11);
   }
 
   &__overlay {
@@ -67,7 +68,8 @@
   }
 
   .main__section {
-    padding: 35px 0px;
+    padding: 0;
+    padding-top: 35px;
     width: 100%;
     position: relative;
   }
