--- a/frontend/src/assets/styles/pages/services.css
+++ b/frontend/src/assets/styles/pages/services.css
@@ -12,6 +12,7 @@
       @media(--tablet-lg) {
         flex-direction: column;
         height: auto;
+        padding: 0;
       }
     }
 
@@ -38,10 +39,17 @@
     }
 
     &__list {
-      padding-right: calc(var(--gs) * 3.5);
-
       @media (--tablet-lg) {
         height: 240px;
+      }
+
+      &--scroll {
+        padding-right: calc(var(--gs) * 1.25);
+
+        @media (--tablet) {
+          padding-right: calc(var(--gs) * .75);
+        }
+
       }
     }
 
@@ -55,9 +63,10 @@
         margin-bottom: 0;
       }
 
-      @media (--tablet-lg) {
+      @media (--tablet) {
         flex-direction: column;
       }
+
       &--stock {
         height: 100%;
         flex-direction: column;
@@ -70,16 +79,20 @@
         &--scrollbar {
           max-height: 330px;
 
-          @media (--tablet-lg) {
-            height: 210px;
+          @media (--tablet) {
+            max-height: 210px;
           }
         }
 
         &--number {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
 
-          @media (--tablet-lg) {
-            display: flex;
-            justify-content: space-between;
+          @media (--tablet) {
+            flex-direction: row;
+            /* justify-content: space-between; */
+            flex-wrap: wrap;
             padding: calc(var(--gs) * 1.25) calc(var(--gs) * 2);
           }
         }
@@ -90,12 +103,20 @@
           border-bottom-left-radius: 25px;
 
           @media (--tablet-lg) {
+            padding: calc(var(--gs) * 2) calc(var(--gs) * 2.5);
+          }
+
+          @media (--tablet) {
             padding: calc(var(--gs) * 1.25) calc(var(--gs) * 2);
           }
         }
 
         &--text {
           @media (--tablet-lg) {
+            /* padding: calc(var(--gs) * 2) calc(var(--gs) * 2.5); */
+          }
+
+          @media (--tablet) {
             padding: calc(var(--gs) * 1.25) calc(var(--gs) * 2);
           }
         }
@@ -104,7 +125,12 @@
       &-text {
         font-size: 20px;
         line-height: 1.25;
+
         @media (--tablet-lg) {
+          font-size: 18px;
+        }
+
+        @media (--tablet) {
           font-size: 14px;
         }
 
@@ -112,6 +138,11 @@
           font-size: 24px;
 
           @media (--tablet-lg) {
+            font-size: 20px;
+            text-align: right;
+          }
+
+          @media (--tablet) {
             font-size: 16px;
           }
         }
@@ -132,12 +163,22 @@
         }
 
         @media (--tablet-lg) {
+          font-size: 18px
+        }
+
+        @media (--tablet) {
+          font-size: 16px;
           margin-bottom: 0;
+          margin-left: auto;
         }
 
         &--old {
           color: var(--cl-grey);
           font-size: 16px;
+
+          @media (--tablet) {
+            margin-left: 0;
+          }
         }
 
         &--stock {
@@ -151,6 +192,10 @@
         font-size: 35px;
 
         @media (--tablet-lg) {
+          font-size: 24px;
+        }
+
+        @media (--tablet) {
           font-size: 18px;
         }
 
@@ -158,6 +203,10 @@
           font-size: 40px;
 
           @media (--tablet-lg) {
+            font-size: 28px
+          }
+
+          @media (--tablet) {
             font-size: 18px;
           }
         }
@@ -167,6 +216,10 @@
           text-decoration: line-through;
 
           @media (--tablet-lg) {
+            font-size: 20px;
+          }
+
+          @media (--tablet) {
             font-size: 16px;
           }
         }
