--- a/frontend/src/assets/styles/elements/select.css
+++ b/frontend/src/assets/styles/elements/select.css
@@ -2,6 +2,7 @@
   display: flex;
   width: 100%;
   flex-direction: column;
+  position: relative;
 }
 .option-container {
   background: #fbf6ea;
@@ -15,7 +16,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  position: relative;
   order: 1;
 }
 .option-container.active {
