--- a/frontend/src/assets/styles/components/Background.css
+++ b/frontend/src/assets/styles/components/Background.css
@@ -1,11 +1,12 @@
 .background {
-  position: absolute;
+  position: fixed;
   overflow: hidden;
   top: 0;
   left: 0;
   z-index: -2;
-  height: 100%;
+  height: 100vh;
   width: 100%;
+  background-color: #8ddeda;
   @media (--tablet-lg) {
     /* position: relative; */
     height: 400px;
