--- a/frontend/src/assets/styles/components/Background.css
+++ b/frontend/src/assets/styles/components/Background.css
@@ -65,3 +65,18 @@ g {
   transform-origin: center;
   transform-box: fill-box;
 }
+#Spin1 {
+  transform-origin: 37% 52%;
+}
+#Spin2 {
+  transform-origin: 37% 52%;
+}
+#Spin3 {
+  transform-origin: 50% 62%;
+}
+#Spin4 {
+  transform-origin: 55% 45%;
+}
+#Spin5 {
+  transform-origin: 50% 61%;
+}
