--- a/frontend/src/assets/styles/pages/contactForm.css
+++ b/frontend/src/assets/styles/pages/contactForm.css
@@ -1,9 +1,15 @@
 /* CONTACT
 ================================================ */
-.section--contact {
-  animation: fade-left 0.4s ease;
+.container--contact {
+  animation: fade-left 0.75s ease-in-out;
   @media (--tablet-lg) {
-    animation: fade-to-top 0.4s ease;
+    animation: fade-to-top 1s ease;
+  }
+}
+.container--contact-exit {
+  animation: fade-right 0.75s ease-in-out;
+  @media (--tablet-lg) {
+    animation: fade-to-top 0.7s ease;
   }
 }
 
@@ -194,12 +200,22 @@ textarea:-moz-placeholder {
 }
 @keyframes fade-left {
   0% {
-    transform: translateX(-100%);
+    transform: translateX(-60%);
     opacity: 0;
   }
   100% {
     transform: translateX(0%);
     opacity: 1;
+  }
+}
+@keyframes fade-right {
+  0% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+  100% {
+    transform: translateX(-60%);
+    opacity: 0;
   }
 }
 @keyframes fade-to-top {
