исправлена кнопка на главной

--- a/frontend/src/assets/styles/base/container.css
+++ b/frontend/src/assets/styles/base/container.css
@@ -29,6 +29,7 @@
 
   @media (--tablet-lg) {
     padding-top: calc(var(--gs) * 11);
+    padding-top: 79px;
     padding-bottom: calc(var(--gs) * 10);
   }
 }
