--- a/frontend/src/assets/styles/components/Navbar.css
+++ b/frontend/src/assets/styles/components/Navbar.css
@@ -8,7 +8,7 @@
   padding: 15px 0;
 
   @media (--tablet-lg) {
-    /* height: 60px; */
+    height: 80px;
   }
 
   @media (--mobile) {
@@ -91,7 +91,7 @@
       background: url("../../img/navbar/bg_nav.svg") no-repeat;
       background-position: 0% 0%;
       background-size: cover;
-      transition: transform 1s ease-out;
+      transition: transform 0.4s ease-in-out;
       padding-top: 75px;
       padding-left: calc(var(--gs) * 3);
       transform-origin: right bottom;
