--- a/frontend/src/assets/styles/elements/home-button.css
+++ b/frontend/src/assets/styles/elements/home-button.css
@@ -10,6 +10,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  user-select: none;
   &:hover {
     border: 5px solid #349a8a;
   }
@@ -39,6 +40,11 @@
     position: absolute;
     top: 0;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translateX(-50%) translateY(-100%);
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.2);
+    user-select: none;
+    &:hover a {
+      color: #fff;
+    }
   }
 }
